removed ios tests separated browserstack and emulator tests simplified configs refactoring